added srcset to all images with correct widths

--- a/location.html
+++ b/location.html
@@ -1,54 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Modern Art Gallery Location</title>
-</head>
-<body>
-  <header>
-    <nav><a href="index.html">Back To Home</a></nav>
-    <img src="assets/desktop/image-map.png" />
-  </header>
-  
-  <section>
-    <h1>Our Location</h1>
-    <p>
-      <span>99 King Street</span>
-      Newport
-      RI 02840
-      United States Of America
-    </p>
-    <p>
-      Our newly opened gallery is located near the Edward King House on 99 King Street, the Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm.
-    </p>
-  </section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Modern Art Gallery Location</title>
+  </head>
+  <body>
+    <header>
+      <nav><a href="index.html">Back To Home</a></nav>
+      <img
+        srcset="
+          assets/desktop/image-map.png    1440w,
+          assets/desktop/image-map@2x.png 2880w,
+          assets/tablet/image-map.png      768w,
+          assets/tablet/image-map@2x.png  1536w,
+          assets/mobile/image-map.png      375w,
+          assets/mobile/image-map@2x.png   750w
+        "
+      />
+    </header>
 
-  <footer>
-    <h2>Modern Art Gallery</h2>
-    <p>
-      The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King Street, Newport, USA.
-    </p>
+    <section>
+      <h1>Our Location</h1>
+      <p>
+        <span>99 King Street</span>
+        Newport RI 02840 United States Of America
+      </p>
+      <p>
+        Our newly opened gallery is located near the Edward King House on 99
+        King Street, the Modern Art Gallery is free to all visitors and open
+        seven days a week from 8am to 9pm.
+      </p>
+    </section>
 
-    <ul>
-      <li>
-        <a href="">
-          <img src="assets/icon-facebook.svg" alt="facebook icon">
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <img src="assets/icon-instagram.svg" alt="facebook icon">
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <img src="assets/icon-twitter.svg" alt="facebook icon">
-        </a>
-      </li>
-    </ul>
-  </footer>
-  
-</body>
+    <footer>
+      <h2>Modern Art Gallery</h2>
+      <p>
+        The Modern Art Gallery is free to all visitors and open seven days a
+        week from 8am to 9pm. Find us at 99 King Street, Newport, USA.
+      </p>
+
+      <ul>
+        <li>
+          <a href="">
+            <img src="assets/icon-facebook.svg" alt="facebook icon" />
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="assets/icon-instagram.svg" alt="facebook icon" />
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="assets/icon-twitter.svg" alt="facebook icon" />
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
