--- a/index.html
+++ b/index.html
@@ -1,54 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Modern Art Gallery</title>
-</head>
-<body>
-  <!-- Hero Header-->
-  <header>
-    <h1>Modern Art Gallery</h1>
-    <img src="" />
-    <p>The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these pieces inspire you? Visit us and find out.</p>
-    <nav>
-      <a href="#">Our Location</a>
-    </nav>
-  </header>
-  <!-- Your Day Section -->
-  <section>
-    <h2>Your Day at the Gallery</h2>
-    <p>Wander through our distinct collections and find new insights about our artists. Dive into the details of their creative process.</p>
-    <img src="" />
-    <img src="" />
-    <img src="" />
-    <div>
-      <h3>Come & Be Inspired</h3>
-      <p>We're excited to welcome you to our gallery and see how our collections influence you.</p>
-    </div>
-  </section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Modern Art Gallery</title>
+  </head>
+  <body>
+    <!-- Hero Header-->
+    <header>
+      <h1>Modern Art Gallery</h1>
+      <img
+        srcset="
+          assets/desktop/image-hero.jpg     540w,
+          assets/desktop/image-hero@2x.jpg 1080w,
+          assets/tablet/image-hero.jpg      437w,
+          assets/tablet/image-hero@2x.jpg   874w,
+          assets/mobile/image-hero.jpg      375w,
+          assets/mobile/image-hero@2x.jpg   750w
+        "
+      />
+      <p>
+        The arts in the collection of the Modern Art Gallery all started from a
+        spark of inspiration. Will these pieces inspire you? Visit us and find
+        out.
+      </p>
+      <nav>
+        <a href="/location.html">Our Location</a>
+      </nav>
+    </header>
+    <!-- Your Day Section -->
+    <section>
+      <h2>Your Day at the Gallery</h2>
+      <p>
+        Wander through our distinct collections and find new insights about our
+        artists. Dive into the details of their creative process.
+      </p>
+      <img
+        srcset="
+          assets/desktop/image-grid-1.jpg     635w,
+          assets/desktop/image-grid-1@2x.jpg 1270w,
+          assets/tablet/image-grid-1.jpg      398w,
+          assets/tablet/image-grid-1@2x.jpg   796w,
+          assets/mobile/image-grid-1.jpg      343w,
+          assets/mobile/image-grid-1@2x.jpg   686w
+        "
+      />
+      <img
+        srcset="
+          assets/desktop/image-grid-2.jpg     635w,
+          assets/desktop/image-grid-2@2x.jpg 1270w,
+          assets/tablet/image-grid-2.jpg      398w,
+          assets/tablet/image-grid-2@2x.jpg   796w,
+          assets/mobile/image-grid-2.jpg      343w,
+          assets/mobile/image-grid-2@2x.jpg   686w
+        "
+      />
+      <img
+        srcset="
+          assets/desktop/image-grid-3.jpg     635w,
+          assets/desktop/image-grid-3@2x.jpg 1270w,
+          assets/tablet/image-grid-3.jpg      398w,
+          assets/tablet/image-grid-3@2x.jpg   796w,
+          assets/mobile/image-grid-3.jpg      343w,
+          assets/mobile/image-grid-3@2x.jpg   686w
+        "
+      />
+      <div>
+        <h3>Come & Be Inspired</h3>
+        <p>
+          We're excited to welcome you to our gallery and see how our
+          collections influence you.
+        </p>
+      </div>
+    </section>
 
-  <footer>
-    <h2>Modern Art Gallery</h2>
-    <p>The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King Street, Newport, USA.</p>
-    <ul>
-      <li>
-        <a href="">
-          <img src="assets/icon-facebook.svg" alt="facebook icon">
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <img src="assets/icon-instagram.svg" alt="facebook icon">
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <img src="assets/icon-twitter.svg" alt="facebook icon">
-        </a>
-      </li>
-    </ul>
-  </footer> 
-</body>
+    <footer>
+      <h2>Modern Art Gallery</h2>
+      <p>
+        The Modern Art Gallery is free to all visitors and open seven days a
+        week from 8am to 9pm. Find us at 99 King Street, Newport, USA.
+      </p>
+      <ul>
+        <li>
+          <a href="">
+            <img src="assets/icon-facebook.svg" alt="facebook icon" />
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="assets/icon-instagram.svg" alt="facebook icon" />
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="assets/icon-twitter.svg" alt="facebook icon" />
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
