added svg icons to page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@800;900&family=Outfit:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>Modern Art Gallery</title>
   </head>
   <body>
@@ -32,7 +33,10 @@
         out.
       </p>
       <nav>
-        <a href="/location.html">Our Location</a>
+        <a href="/location.html">
+          <span>Our Location</span>
+          <img src="assets/icon-arrow-right.svg" />
+        </a>
       </nav>
     </header>
     <!-- Your Day Section -->
