--- a/location.html
+++ b/location.html
@@ -10,11 +10,17 @@
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@800;900&family=Outfit:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>Modern Art Gallery Location</title>
   </head>
   <body>
     <header>
-      <nav><a href="index.html">Back To Home</a></nav>
+      <nav>
+        <a href="index.html">
+          <img src="assets/icon-arrow-left.svg" />
+          <span> Back To Home </span>
+        </a>
+      </nav>
       <img
         srcset="
           assets/desktop/image-map.png    1440w,
