added normailze.css and element_defaults.css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="element_defaults.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@800;900&family=Outfit:wght@300&display=swap"
       rel="stylesheet"
@@ -91,7 +93,7 @@
         The Modern Art Gallery is free to all visitors and open seven days a
         week from 8am to 9pm. Find us at 99 King Street, Newport, USA.
       </p>
-      <ul>
+      <ul class>
         <li>
           <a href="">
             <img src="assets/icon-facebook.svg" alt="facebook icon" />
