--- a/location.html
+++ b/location.html
@@ -14,12 +14,16 @@
     <link rel="stylesheet" href="style.css" />
     <title>Modern Art Gallery Location</title>
   </head>
-  <body>
-    <header>
+  <body class="ff-body">
+    <header class="page-padding">
       <nav>
-        <a href="index.html">
-          <img src="assets/icon-arrow-left.svg" />
-          <span> Back To Home </span>
+        <a class="btn" href="index.html">
+          <span class="btn__icon-container">
+            <svg width="10" height="24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke="#FFF" fill="none" d="M9 24 1 12 9 0" />
+            </svg>
+          </span>
+          <span class="btn__text"> Back To Home </span>
         </a>
       </nav>
       <img
