moved page-padding to class to correct elements

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </head>
   <body class="ff-body">
     <!-- Hero Header-->
-    <header class="page-padding">
-      <h1 class="fs-title-xl ff-display">Modern Art Gallery</h1>
+    <header>
+      <h1 class="fs-title-xl ff-display page-padding">Modern Art Gallery</h1>
       <img
         class="w-100"
         srcset="
@@ -30,12 +30,12 @@
           assets/mobile/image-hero@2x.jpg   750w
         "
       />
-      <p class="fs-body-md">
+      <p class="fs-body-md page-padding">
         The arts in the collection of the Modern Art Gallery all started from a
         spark of inspiration. Will these pieces inspire you? Visit us and find
         out.
       </p>
-      <nav>
+      <nav class="page-padding">
         <a class="btn" href="/location.html">
           <span class="btn__text">Our Location</span>
           <span class="btn__icon-container">
