--- a/location.html
+++ b/location.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="element_defaults.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@800;900&family=Outfit:wght@300&display=swap"
       rel="stylesheet"
@@ -23,7 +24,7 @@
               <path stroke="#FFF" fill="none" d="M9 24 1 12 9 0" />
             </svg>
           </span>
-          <span class="btn__text"> Back To Home </span>
+          <span class="btn__text">Back To Home</span>
         </a>
       </nav>
       <img
@@ -38,8 +39,8 @@
       />
     </header>
 
-    <section>
-      <h1>Our Location</h1>
+    <section class="page-padding">
+      <h1 class="ff-display fs-title-md">Our Location</h1>
       <p>
         <span>99 King Street</span>
         Newport RI 02840 United States Of America
@@ -51,14 +52,14 @@
       </p>
     </section>
 
-    <footer>
-      <h2>Modern Art Gallery</h2>
+    <footer class="footer bg-accent">
+      <h2 class="fs-title-sm ff-display">Modern Art Gallery</h2>
       <p>
         The Modern Art Gallery is free to all visitors and open seven days a
         week from 8am to 9pm. Find us at 99 King Street, Newport, USA.
       </p>
 
-      <ul>
+      <ul class="flex">
         <li>
           <a href="">
             <img src="assets/icon-facebook.svg" alt="facebook icon" />
