v1 mobile layout complete

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body class="ff-body">
     <!-- Hero Header-->
     <header class="flex-col">
-      <h1 class="fs-title-xl ff-display page-padding">Modern Art Gallery</h1>
+      <h1 class="fs-title-xl ff-display page-padding">Modern <br />Art Gallery</h1>
       <img
         class="w-100 hero-image"
         srcset="
@@ -54,7 +54,7 @@
     </header>
     <!-- Your Day Section -->
     <section class="gallery-section page-padding grid">
-      <h2 class="ff-display fs-title-md">Your Day at the Gallery</h2>
+      <h2 class="ff-display fs-title-md">Your Day <br /> at the Gallery</h2>
       <p class="fs-body-md">
         Wander through our distinct collections and find new insights about our
         artists. Dive into the details of their creative process.
@@ -89,7 +89,7 @@
           assets/mobile/image-grid-3@2x.jpg   686w
         "
       />
-      <div class="bg-dark-100 grid-card">
+      <div class="bg-dark-100 gallery-section__text-card">
         <h3 class="ff-display fs-title-md">Come & Be Inspired</h3>
         <p class="fs-body-md">
           We're excited to welcome you to our gallery and see how our
@@ -99,7 +99,7 @@
     </section>
 
     <footer class="footer bg-dark-100">
-      <h2>Modern Art Gallery</h2>
+      <h2 class="fs-title-xs ff-display">Modern <br />Art Gallery</h2>
       <p class="fs-body-sm">
         The Modern Art Gallery is free to all visitors and open seven days a
         week from 8am to 9pm. Find us at 99 King Street, Newport, USA.
