--- a/location.html
+++ b/location.html
@@ -53,7 +53,7 @@
     </section>
 
     <footer class="footer bg-accent">
-      <h2 class="fs-title-sm ff-display">Modern Art Gallery</h2>
+      <h2 class="fs-title-xs ff-display">Modern <br />Art Gallery</h2>
       <p>
         The Modern Art Gallery is free to all visitors and open seven days a
         week from 8am to 9pm. Find us at 99 King Street, Newport, USA.
