made tweaks to gallery-section title card, everything looks good now.

--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
     </header>
     <!-- Your Day Section -->
     <section class="gallery-section page-padding grid">
-      <h2 class="ff-display fs-title-md">Your Day <br /> at the Gallery</h2>
-      <p class="fs-body-md">
-        Wander through our distinct collections and find new insights about our
-        artists. Dive into the details of their creative process.
-      </p>
+      <div class="gallery-section__title-card">
+        <h2 class="ff-display fs-title-md">Your Day <br /> at the Gallery</h2>
+        <p class="fs-body-md">
+          Wander through our distinct collections and find new insights about our
+          artists. Dive into the details of their creative process.
+        </p>
+      </div>
       <img
         srcset="
           assets/desktop/image-grid-1.jpg     635w,
