v1 mobile location page done

--- a/location.html
+++ b/location.html
@@ -13,10 +13,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="location.css" />
     <title>Modern Art Gallery Location</title>
   </head>
   <body class="ff-body">
-    <header class="page-padding">
+    <header class="map-section">
       <nav>
         <a class="btn" href="index.html">
           <span class="btn__icon-container">
@@ -24,7 +25,7 @@
               <path stroke="#FFF" fill="none" d="M9 24 1 12 9 0" />
             </svg>
           </span>
-          <span class="btn__text">Back To Home</span>
+          <span class="btn__text ff-display">Back To Home</span>
         </a>
       </nav>
       <img
@@ -39,13 +40,15 @@
       />
     </header>
 
-    <section class="page-padding">
-      <h1 class="ff-display fs-title-md">Our Location</h1>
-      <p>
-        <span>99 King Street</span>
-        Newport RI 02840 United States Of America
+    <section class="address-section page-padding bg-dark-100">
+      <h1 class="ff-display fs-title-md fs-title-lg">Our Location</h1>
+      <p class="address-section__address">
+        <span class="fc-accent fs-title-sm ff-display">99 King Street</span>
+        <span>Newport</span>
+        <span>RI 02840</span>
+        <span>United States Of America</span>
       </p>
-      <p>
+      <p class="fs-body-md">
         Our newly opened gallery is located near the Edward King House on 99
         King Street, the Modern Art Gallery is free to all visitors and open
         seven days a week from 8am to 9pm.
@@ -54,7 +57,7 @@
 
     <footer class="footer bg-accent">
       <h2 class="fs-title-xs ff-display">Modern <br />Art Gallery</h2>
-      <p>
+      <p class="fs-body-sm">
         The Modern Art Gallery is free to all visitors and open seven days a
         week from 8am to 9pm. Find us at 99 King Street, Newport, USA.
       </p>
